# over-there

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: rust.yml
over-there-auth/: Cargo.toml
over-there-auth/src/: auth.rs  digest.rs  lib.rs
over-there-core/: Cargo.toml
over-there-core/src/: event.rs  lib.rs  state.rs
over-there-core/src/action/: heartbeat.rs  mod.rs  unknown.rs  version.rs
over-there-core/src/action/handler/: heartbeat.rs  unknown.rs  version.rs
over-there-core/src/client/: connect.rs  connected.rs  error.rs  event.rs  file.rs  future.rs  inbound.rs  mod.rs  proc.rs  route.rs  state.rs
over-there-core/src/event/: mod.rs  udp.rs
over-there-core/src/msg/: callback.rs  content.rs  mod.rs
over-there-core/src/msg/content/: batch.rs  capabilities.rs  custom.rs  error.rs  exec.rs  file.rs  forward.rs  internal_debug.rs  mod.rs  sequence.rs  transform.rs  version.rs
over-there-core/src/msg/content/io/: exec.rs  file.rs  fs.rs  mod.rs  proc.rs
over-there-core/src/msg/content/reply/: batch.rs  capabilities.rs  custom.rs  error.rs  forward.rs  generic_error.rs  internal_debug.rs  mod.rs  sequence.rs  version.rs
over-there-core/src/msg/content/reply/io/: fs.rs  mod.rs  proc.rs
over-there-core/src/msg/content/request/: batch.rs  capabilities.rs  custom.rs  forward.rs  internal_debug.rs  mod.rs  sequence.rs  transform.rs  version.rs
over-there-core/src/msg/content/request/io/: fs.rs  proc.rs
over-there-core/src/server/: custom.rs  dir.rs  event.rs  file.rs  listen.rs  listening.rs  mod.rs  proc.rs  route.rs  state.rs
over-there-core/src/server/action/: mod.rs
over-there-core/src/server/action/handler/: capabilities.rs  exec.rs  file.rs  fs.rs  heartbeat.rs  internal_debug.rs  mod.rs  proc.rs  unknown.rs  version.rs
over-there-core/src/server/fs/: dir.rs  file.rs  mod.rs
over-there-core/tests/: setup.rs  test.rs
over-there-core/tests/scenarios/: ask_timeout.rs  capabilities.rs  dir.rs  file.rs  heartbeat.rs  mod.rs  proc.rs  version.rs
over-there-crypto/: Cargo.toml
over-there-crypto/src/: closure.rs  error.rs  key.rs  lib.rs  nonce.rs  noop.rs  split.rs
over-there-crypto/src/aead/: aes_gcm.rs  aes_gcm_128.rs  aes_gcm_256.rs  aes_gcm_siv.rs  aes_gcm_siv_128.rs  aes_gcm_siv_256.rs  aes_siv.rs  aes_siv_128.rs  aes_siv_256.rs  bicrypter.rs  impls.rs  mod.rs
over-there-crypto/src/nonce/: cache.rs  mod.rs
over-there-crypto/src/nonce/aead/: mod.rs
over-there-crypto/src/nonce/aead/aes_gcm/: cache.rs  mod.rs
over-there-crypto/src/nonce/aead/aes_gcm_siv/: cache.rs  mod.rs
over-there-crypto/src/nonce/aead/aes_siv/: cache.rs  mod.rs
over-there-derive/: Cargo.toml
over-there-derive/src/: lib.rs
over-there-msg/: Cargo.toml
over-there-msg/src/: handler.rs  lib.rs  msg.rs  transmitter.rs
over-there-msg/src/communicator/: mod.rs  udp.rs
over-there-msg/src/msg/: content.rs  mod.rs
over-there-msg/src/msg/content/: mod.rs
over-there-msg/src/msg/content/request/: custom.rs  exec.rs  file_system.rs  forward.rs  mod.rs  standard.rs
over-there-msg/src/msg/content/response/: custom.rs  exec.rs  file_system.rs  forward.rs  mod.rs  standard.rs
over-there-msg/src/msg/receiver/: mod.rs  tcp.rs  udp.rs
over-there-msg/src/msg/transmitter/: file.rs  mod.rs  tcp.rs  udp.rs
over-there-msg/src/msg/types/: mod.rs  request.rs  response.rs
over-there-msg/src/transmitter/: data.rs  mod.rs  msg.rs  tcp.rs  udp.rs
over-there-msg/src/transmitter/msg/: file.rs  mod.rs  tcp.rs  udp.rs
over-there-msg/tests/: test.rs
over-there-sign/: Cargo.toml
over-there-sign/src/: auth.rs  digest.rs  lib.rs
over-there-transport/: Cargo.toml
over-there-transport/src/: assembler.rs  disassembler.rs  lib.rs  packet.rs  tcp.rs  transmitter.rs  transport.rs  udp.rs
over-there-transport/src/net/: mod.rs  tcp.rs  udp.rs
over-there-transport/src/transceiver/: mod.rs  receiver.rs  tcp.rs  transmitter.rs  udp.rs
over-there-transport/src/transceiver/net/: mod.rs  tcp.rs  udp.rs
over-there-transport/src/transceiver/net/tcp/: listener.rs  stream.rs
over-there-transport/src/transceiver/net/udp/: mod.rs  stream.rs
over-there-transport/tests/: test.rs
over-there-utils/: Cargo.toml
over-there-utils/src/: callback.rs  delay.rs  delimiter.rs  either.rs  exec.rs  lib.rs  nonblocking.rs  ttl.rs
over-there-utils/src/serializers/: error_kind.rs  io_error.rs  mod.rs
over-there-wire/: Cargo.toml
over-there-wire/src/: lib.rs
over-there-wire/src/net/: mod.rs  tcp.rs  udp.rs
over-there-wire/src/wire/: mod.rs  packet.rs  tcp.rs  udp.rs
over-there-wire/src/wire/input/: assembler.rs  decoder.rs  mod.rs
over-there-wire/src/wire/output/: disassembler.rs  encoder.rs  mod.rs
src/: communicator.rs  format.rs  lib.rs  main-client.rs  main-daemon.rs  main.rs  msg.rs  parsers.rs  start.rs  utils.rs
src/builder/: auth.rs  crypto.rs  mod.rs
src/cli/: format.rs  mod.rs
src/cli/builder/: auth.rs  crypto.rs  mod.rs
src/cli/opts/: mod.rs  schema.rs
src/client/: capabilities.rs  exec.rs  mod.rs  version.rs
src/com/: communicator.rs  manager.rs  mod.rs  msg.rs
src/core/: mod.rs
src/core/client/: connected.rs  error.rs  file.rs  inbound.rs  mod.rs  proc.rs  state.rs
src/core/event/: mod.rs  tcp.rs  udp.rs
src/core/msg/: mod.rs
src/core/server/: custom.rs  listening.rs  mod.rs  state.rs
src/msg/: handler.rs  manager.rs  mod.rs  utils.rs
src/opts/: mod.rs  parsers.rs  schema.rs  types.rs
src/opts/client/: dir.rs  exec.rs  file.rs  internal_debug.rs  mod.rs  raw.rs  version.rs
src/opts/server/: mod.rs
src/server/: mod.rs
src/transport/: crypto.rs  mod.rs  msg.rs  packet.rs  udp.rs
src/transport/auth/: digest.rs  mod.rs  split.rs
src/transport/crypto/: mod.rs  split.rs
src/transport/data/: assembler.rs  disassembler.rs  errors.rs  mod.rs
src/transport/net/: mod.rs  udp.rs
src/transport/security/: crypto.rs
src/utils/: capture.rs  delay.rs  either.rs  exec.rs  ttl.rs
src/wire/wire/: mod.rs
tests/: cli.rs  cli_common.rs  core.rs  test.rs
tests/core_common/: mod.rs  setup.rs
(+78 files in other folders)
