[package]
name = "over-there"
description = "Tool to enable file editing, software management, and execution remotely from \"over there.\""
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"

[workspace]
members = [
    "over-there-auth",
    "over-there-core",
    "over-there-crypto",
    "over-there-derive",
    "over-there-utils",
    "over-there-wire",
]

[features]
default = ["single-threaded"]
single-threaded = ["tokio/rt-core"]
multi-threaded = ["tokio/rt-threaded"]

# TODO: Currently, there is not a way to mark a dependency as binary-only
#       and the workarounds suggested are:
#
#       1. Make binaries as examples instead and use dev-dependencies (bad)
#       2. Make binary dependencies as optional features that are required
#          by the binaries (bad)
#       3. Use workspaces to separate out binaries and library (overkill)
#
#       Until I reach the point where I'm actively distributing this library,
#       I'll ignore the problem and bring everything in to the library.
[dependencies]
clap = { version = "3.0.0-beta.1", git = "https://github.com/clap-rs/clap.git"}
log = "0.4.8"
env_logger = "0.7.1"
strum = "0.17.1"
strum_macros = "0.17.1"
over-there-auth = { path = "./over-there-auth" }
over-there-crypto = { path = "./over-there-crypto" }
over-there-core = { path = "./over-there-core" }
over-there-utils = { path = "./over-there-utils" }
over-there-wire = { path = "./over-there-wire" }

[dependencies.tokio]
version = "0.2.11"
default-features = false

[dev-dependencies]
tempfile = "3.1.0"
