[package]
name = "over-there"
description = "Tool to enable file editing, software management, and execution remotely \"over there.\""
edition = "2018"
version = "0.1.0-alpha.1"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://over-there.io"
repository = "https://github.com/chipsenkbeil/over-there"
categories = ["command-line-utilities"]
keywords = ["cli", "network", "client", "server", "remote"]

[workspace]
members = [
    "over-there-auth",
    "over-there-core",
    "over-there-crypto",
    "over-there-derive",
    "over-there-utils",
    "over-there-wire",
]

[features]
default = ["single-threaded", "format-json"]
single-threaded = ["tokio/dns", "tokio/rt-core"]
multi-threaded = ["tokio/dns", "tokio/rt-threaded"]
format-json = ["serde_json"]
format-sexpression = ["serde-lexpr"]

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
strum = "0.17.1"
strum_macros = "0.17.1"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = { version = "1.0.48", optional = true }
serde-lexpr = { version = "0.1.1", optional = true }
over-there-auth = { path = "./over-there-auth", version = "0.1.0-alpha.1" }
over-there-crypto = { path = "./over-there-crypto", version = "0.1.0-alpha.1" }
over-there-core = { path = "./over-there-core", version = "0.1.0-alpha.1" }
over-there-utils = { path = "./over-there-utils", version = "0.1.0-alpha.1" }
over-there-wire = { path = "./over-there-wire", version = "0.1.0-alpha.1" }

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false # Must exclude color as it pulls in a conflicting
                         # version of termcolor (1.1) whereas env_logger
                         # and other dependencies using 1.0.5
features = [ "suggestions", "derive", "std", "cargo", "wrap_help" ]

[dependencies.tokio]
version = "0.2.13"
default-features = false

[dev-dependencies]
tempfile = "3.1.0"
