[package]
name = "over-there"
description = "Tool to enable file editing, software management, and execution remotely \"over there.\""
edition = "2018"
version = "0.1.0-alpha.1"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://over-there.io"
repository = "https://github.com/chipsenkbeil/over-there"
categories = ["command-line-utilities"]
keywords = ["cli", "network", "client", "server", "remote"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[features]
default = ["single-threaded"]
single-threaded = ["tokio/dns", "tokio/rt-core"]
multi-threaded = ["tokio/dns", "tokio/rt-threaded"]
format-sexpression = ["serde-lexpr"]
cli = ["clap"]

[[bin]]
name = "over-there"
required-features = ["cli"]

[dependencies]
aead = "0.2.0"
aes-gcm = "0.5.0"
aes-gcm-siv = "0.4.1"
aes-siv = "0.2.0"
chrono = { version = "0.4.10", features = ["serde"] }
derive_builder = "0.9.0"
env_logger = "0.7.1"
futures = "0.3.4"
futures-io = "0.3.4"
hmac = "0.7.1"
jsonpath_lib = "0.2.4"
lru = "0.4.3"
log = "0.4.8"
rand = "0.7.3"
schemars = "0.7.6"
serde = { version = "1.0.111", features = ["derive"] }
serde-big-array = "0.2.0"
serde_bytes = "0.11.3"
serde_cbor = "0.11.1"
serde_json = { version = "1.0.48" }
serde-lexpr = { version = "0.1.1", optional = true }
sha2 = "0.8.1"
strum = "0.17.1"
strum_macros = "0.17.1"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false # Must exclude color as it pulls in a conflicting
                         # version of termcolor (1.1) whereas env_logger
                         # and other dependencies using 1.0.5
features = [ "suggestions", "derive", "std", "cargo", "wrap_help" ]
optional = true

[dependencies.derive_more]
version = "0.99.7"
default-features = false
features = ["display", "error"]

[dependencies.tokio]
version = "0.2.13"
features = ["fs", "io-util", "macros", "process", "sync", "time", "tcp", "udp"]

[dev-dependencies]
tokio = { version = "0.2.13", features = ["test-util"] }
env_logger = "0.7.1"
tempfile = "3.1.0"
