[package]
name = "over-there-core"
description = "Core library providing gateway into client <-> server communication for developers and tooling"
edition = "2018"
version = "0.1.0-alpha.1"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://over-there.dev"
repository = "https://github.com/chipsenkbeil/over-there/tree/master/over-there-auth"
categories = ["development-tools", "filesystem", "network-programming"]
keywords = ["api", "network", "protocol", "client", "server"]

[features]
default = ["custom", "exec", "file-system", "forward"]

# Ability to send custom messages with arbitrary handlers
custom = []

# Ability to execute programs remotely and retrieve results
exec = []

# Ability to manipulate the file system
file-system = []

# Ability to forward messages to other over-there instances
forward = []

[dependencies]
futures = "0.3.4"
schemars = "0.7.6"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = { version = "1.0.48" }
jsonpath_lib = "0.2.4"
serde_bytes = "0.11.3"
serde_cbor = "0.11.1"
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4.8"
rand = "0.7.3"
derive_builder = "0.9.0"
over-there-auth = { path = "../over-there-auth", version = "0.1.0-alpha.1" }
over-there-crypto = { path = "../over-there-crypto", version = "0.1.0-alpha.1" }
over-there-derive = { path = "../over-there-derive", version = "0.1.0-alpha.1" }
over-there-utils = { path = "../over-there-utils", version = "0.1.0-alpha.1" }
over-there-wire = { path = "../over-there-wire", version = "0.1.0-alpha.1" }

[dependencies.tokio]
version = "0.2.13"
features = ["fs", "io-util", "macros", "process", "sync", "time", "tcp", "udp"]

[dependencies.derive_more]
version = "0.99.3"
default-features = false
features = ["display"]

[dev-dependencies]
tokio = { version = "0.2.13", features = ["test-util"] }
env_logger = "0.7.1"
tempfile = "3.1.0"
