[package]
name = "over-there-crypto"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
aead = "0.2.0"
aes-gcm = "0.3.0"
aes-gcm-siv = "0.3.0"
aes-siv = "0.2.0"
lru = "0.4.3"
serde = { version = "1.0.103", features = ["derive"] }
serde-big-array = "0.2.0"
over-there-derive = { path = "../over-there-derive" }
