[package]
name = "over-there-derive"
description = "Macro library for use with other over-there libraries"
edition = "2018"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://over-there.dev"
repository = "https://github.com/chipsenkbeil/over-there/tree/master/over-there-derive"
keywords = ["macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.8"
quote = "1.0"
syn = "1.0"
