[package]
name = "over-there-msg"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_bytes = "0.11.3"
rmp-serde = "0.14.0"
typetag = "0.1.4"
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4.8"
rand = "0.7.2"
over-there-crypto = { path = "../over-there-crypto" }
over-there-sign = { path = "../over-there-sign" }
over-there-transport = { path = "../over-there-transport" }
over-there-utils = { path = "../over-there-utils" }
over-there-derive = { path = "../over-there-derive" }

[dev-dependencies]
env_logger = "0.7.1"
tempfile = "3.1.0"
