[package]
name = "over-there-msg"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"

[features]
default = ["custom", "exec", "file-system", "forward"]

# Ability to send custom messages with arbitrary handlers
custom = []

# Ability to execute programs remotely and retrieve results
exec = []

# Ability to manipulate the file system
file-system = []

# Ability to forward messages to other over-there instances
forward = []

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_bytes = "0.11.3"
rmp-serde = "0.14.0"
chrono = { version = "0.4.10", features = ["serde"] }
strum = "0.17.1"
strum_macros = "0.17.1"
log = "0.4.8"
rand = "0.7.2"
over-there-auth = { path = "../over-there-auth" }
over-there-crypto = { path = "../over-there-crypto" }
over-there-derive = { path = "../over-there-derive" }
over-there-transport = { path = "../over-there-transport" }
over-there-utils = { path = "../over-there-utils" }

[dev-dependencies]
env_logger = "0.7.1"
tempfile = "3.1.0"
