[package]
name = "over-there-utils"
description = "Utility library for use with other over-there libraries"
edition = "2018"
version = "0.1.0-alpha.1"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
license = "MIT OR Apache-2.0"
homepage = "https://over-there.dev"
repository = "https://github.com/chipsenkbeil/over-there/tree/master/over-there-utils"

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
over-there-derive = { path = "../over-there-derive", version = "0.1.0-alpha.1" }
