[package]
name = "over-there-wire"
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_bytes = "0.11.3"
rmp-serde = "0.14.0"
log = "0.4.8"
rand = "0.7.2"
over-there-auth = { path = "../over-there-auth" }
over-there-crypto = { path = "../over-there-crypto" }
over-there-derive = { path = "../over-there-derive" }
over-there-utils = { path = "../over-there-utils" }

[dev-dependencies]
env_logger = "0.7.1"
